// Original file: protobuf/Chat.proto

import type { ChatPost as _chat_ChatPost, ChatPost__Output as _chat_ChatPost__Output } from '../chat/ChatPost';

export interface GetMessagesResponse {
  'chatPosts'?: (_chat_ChatPost)[];
}

export interface GetMessagesResponse__Output {
  'chatPosts'?: (_chat_ChatPost__Output)[];
}
